--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="kk">
 <head>
   <meta charset="UTF-8">
-  <title>Сайыс бағалау жүйесі</title>
+  <title>Бағалау жүйесі</title>
   <link rel="stylesheet" href="style.css">
   <style>
     body { font-family: Arial, sans-serif; padding: 20px; background-color: #f0f4f8; }
